--- a/samples/example/AndroidManifest.xml
+++ b/samples/example/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="no.nordicsemi.android.log.example"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="2.0" >
     
     <uses-permission android:name="no.nordicsemi.android.LOG" />
 
@@ -17,13 +17,19 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="no.nordicsemi.android.log.example.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <provider
+		    android:name="no.nordicsemi.android.log.example.localprovider.MyLogContentProvider"
+		    android:authorities="no.nordicsemi.android.log.example"
+		    android:exported="false" />
     </application>
 
 </manifest>
