--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.gradle
+/local.properties
+/.idea
+*.iml
+.DS_Store
+/build
+/key*
