--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2"
+        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4"
         // The following dependency has been replaced with newer version according to https://github.com/dcendents/android-maven-plugin
         // classpath 'com.github.dcendents:android-maven-plugin:1.2'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,5 +20,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
