--- a/log-timber/build.gradle
+++ b/log-timber/build.gradle
@@ -14,17 +14,17 @@ apply plugin: 'com.jfrog.bintray'
 
 ext {
     PUBLISH_GROUP_ID = 'no.nordicsemi.android'
-    PUBLISH_ARTIFACT_ID = 'log'
+    PUBLISH_ARTIFACT_ID = 'log-timber'
     PUBLISH_VERSION = '2.1.3'
 
     bintrayRepo = 'android'
-    bintrayName = 'nrf-logger-api'
+    bintrayName = 'nrf-logger-timber'
 
     publishedGroupId = PUBLISH_GROUP_ID
     artifact = PUBLISH_ARTIFACT_ID
     libraryVersion = PUBLISH_VERSION
-    libraryName = 'nRF Logger API'
-    libraryDescription = 'nRF Logger API Library'
+    libraryName = 'nRF Logger Timber Tree'
+    libraryDescription = 'nRF Logger Timber Tree'
 
     issuesUrl = 'https://github.com/NordicSemiconductor/nRF-Logger-API/issues'
     siteUrl = 'https://github.com/NordicSemiconductor/nRF-Logger-API'
@@ -58,8 +58,8 @@ android {
 }
 
 dependencies {
-    // Required for @NonNull and @Nullable
-    api 'com.android.support:support-annotations:28.0.0'
+    api 'no.nordicsemi.android:log:2.1.3'
+    api 'com.jakewharton.timber:timber:4.7.1'
 }
 
 afterEvaluate { project ->
