--- a/log-timber/src/main/AndroidManifest.xml
+++ b/log-timber/src/main/AndroidManifest.xml
@@ -28,4 +28,4 @@
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
 
-<manifest package="no.nordicsemi.android.log"/>
+<manifest package="no.nordicsemi.android.log.timber"/>
