--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4"
-        // The following dependency has been replaced with newer version according to https://github.com/dcendents/android-maven-plugin
-        // classpath 'com.github.dcendents:android-maven-plugin:1.2'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
