--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 android.useAndroidX=true
+android.enableJetifier=true
 
 VERSION_NAME=2.2.0
 GROUP=no.nordicsemi.android
