--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -25,5 +25,5 @@ android {
 dependencies {
     implementation 'com.google.android.material:material:1.2.0-beta01'
     implementation 'androidx.fragment:fragment:1.3.0-alpha05'
-    implementation 'no.nordicsemi.android:log:2.2.0'
+    implementation project(':log')
 }
