--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
+        classpath 'com.android.tools.build:gradle:8.6.0'
+        // https://plugins.gradle.org/plugin/io.github.gradle-nexus.publish-plugin
+        classpath "io.github.gradle-nexus:publish-plugin:1.3.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,6 +19,10 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
+
+// Maven Central publishing
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
+apply from: rootProject.file('gradle/publish-root.gradle')
