--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    namespace "no.nordicsemi.android.log.example"
+    compileSdk 34
 
     defaultConfig {
         applicationId "no.nordicsemi.android.log.example"
-        minSdkVersion 17
-        targetSdkVersion 29
+        minSdk 21
+        targetSdk 34
     }
 
     buildTypes {
@@ -17,13 +17,14 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_8
-        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
-    implementation 'com.google.android.material:material:1.2.0-beta01'
-    implementation 'androidx.fragment:fragment:1.3.0-alpha05'
     implementation project(':log')
+
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.fragment:fragment:1.8.2'
 }
